Update email link to open Gmail compose window

--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
         <div class="footer-logo">FlexRelNet</div>
         
         <div class="footer-cta">
-            <a href="mailto:soncwnetp@gmail.com" class="footer-btn primary">Contact for Pilot Partnership</a>
+            <a href="https://mail.google.com/mail/?view=cm&to=soncwnetp@gmail.com&su=FlexRelNet%20Pilot%20Partnership" target="_blank" class="footer-btn primary">Contact for Pilot Partnership</a>
         </div>
         
         <p class="footer-text">
